solutions/app/deployment-web.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: clickcount
    component: web
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clickcount
      component: web
  template:
    metadata:
      labels:
        app: clickcount
        component: web
    spec:
      containers:
      - image: tauffredou/clickcount
        imagePullPolicy: Always
        name: clickcount
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
