solutions/app/service-redis.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis
  labels:
    app: clickcount
    component: redis
spec:
  selector:
    app: clickcount
    component: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  clusterIP: None
